# mini_kgraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
src/: io.hpp  kgraph.cpp  kgraph.h  kgraph_data.h
tests/: test.cpp
